Fix overlapping issue of title with author for title is long

--- a/src/styles/book.css
+++ b/src/styles/book.css
@@ -25,7 +25,7 @@
 
 .title {
   width: 12.313rem;
-  height: 1.813rem;
+  height: auto;
   margin: 0.188rem 20.188rem 0 0;
   font-family: RobotoSlab Arial, sans-serif;
   font-size: 1.375rem;
@@ -88,7 +88,7 @@
 .book-info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
 }
 
